name:                Main
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10


library
        
executable main
  main-is:             Main.hs
  ghc-options:         -Wall -O2
  -- other-modules:
--  other-extensions:    GeneralizedNewtypeDeriving, UndecidableInstances
--                     , TypeSynonymInstances, FlexibleInstances, CPP
  build-depends:       base, array , containers, pretty, transformers, mtl
                     , dlist , unordered-containers, containers, filepath, vector
                     , hashable
  build-tools:         alex, happy
  other-modules:       Lexer, Parser, Ast, Tokens, Translate, Scope, Names, Tree
                     , Jenseits, Backend, Canon, DirectedGraph, RegAlloc, InterferGraph
                     , X86Prg, X86Function, X86Instr, X86CodeGen
  default-language:    Haskell2010
